--- a/sources/spring/parameter-store/src/main/resources/backup/application-dev.properties
+++ b/sources/spring/parameter-store/src/main/resources/backup/application-dev.properties
@@ -5,3 +5,5 @@ aws.paramstore.enabled=true
 aws.paramstore.prefix=/project01
 aws.paramstore.profile-separator=_
 aws.paramstore.name=myapp
+
+test.value=hello
